scrollbar width fix

--- a/ClaraFrontend/src/styles.scss
+++ b/ClaraFrontend/src/styles.scss
@@ -9,6 +9,7 @@ body {
   font-family: 'Nunito Sans', sans-serif;
   background-color: #FAFBFE;
   overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 button:hover, input[type="submit"]:hover {
